MarketPulse Research website - premium market intelligence platform

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="container footer-inner">
       <div class="footer-brand">MarketPulse Research</div>
       <div class="footer-contact">
-        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 914 411 1054 · Email: research@example.com
+        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (999) 123‑45‑67 · Email: research@example.com
       </div>
     </div>
   </footer>
