--- a/cases.html
+++ b/cases.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Кейсы — Конъюнктура & Мнение</title>
+  <title>Кейсы — MarketPulse</title>
   <meta name="description" content="Практические примеры: рост выручки, вывод продуктов, оптимизация маркетинга.">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Конъюнктура & Мнение</a>
+      <a class="logo" href="index.html">MarketPulse</a>
       <nav class="nav">
         <a href="index.html" class="nav-link">Главная</a>
         <a href="services.html" class="nav-link">Услуги</a>
@@ -57,7 +57,7 @@
     <div class="container footer-inner">
       <div class="footer-brand">Конъюнктура & Мнение</div>
       <div class="footer-contact">
-        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (999) 123‑45‑67 · Email: research@example.com
+        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (914) 411-10-54 · Email: research@example.com
       </div>
     </div>
   </footer>
