--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Контакты — Конъюнктура & Мнение</title>
+  <title>Контакты — MarketPulse</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Конъюнктура & Мнение</a>
+      <a class="logo" href="index.html">MarketPulse</a>
       <nav class="nav">
         <a href="index.html" class="nav-link">Главная</a>
         <a href="services.html" class="nav-link">Услуги</a>
@@ -55,7 +55,7 @@
           <h3>Реквизиты и контакты</h3>
           <p><strong>ИНН:</strong> 246602726289</p>
           <p><strong>ИП:</strong> Зернов Павел Николаевич</p>
-          <p><strong>Тел.:</strong> +7 (999) 123‑45‑67</p>
+          <p><strong>Тел.:</strong> +7 (914) 411-10-54</p>
           <p><strong>Email:</strong> research@example.com</p>
         </aside>
       </div>
@@ -66,7 +66,7 @@
     <div class="container footer-inner">
       <div class="footer-brand">Конъюнктура & Мнение</div>
       <div class="footer-contact">
-        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (999) 123‑45‑67 · Email: research@example.com
+        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (914) 411-10-54 · Email: research@example.com
       </div>
     </div>
   </footer>
