--- a/cases.html
+++ b/cases.html
@@ -55,7 +55,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-brand">Конъюнктура & Мнение</div>
+      <div class="footer-brand">MarketPulse</div>
       <div class="footer-contact">
         ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (914) 411-10-54 · Email: research@example.com
       </div>
