--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Услуги — Конъюнктура & Мнение</title>
+  <title>Услуги — MarketPulse</title>
   <meta name="description" content="Портфель услуг: экспресс-анализ рынка, опросы, глубинные интервью, ценообразование и проверка спроса.">
   <meta property="og:title" content="Услуги — Премиальные исследования">
   <meta property="og:description" content="Решения под задачу и бюджет">
@@ -16,7 +16,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">Конъюнктура & Мнение</a>
+      <a class="logo" href="index.html">MarketPulse</a>
       <nav class="nav">
         <a href="index.html" class="nav-link">Главная</a>
         <a href="services.html" class="nav-link active">Услуги</a>
@@ -96,9 +96,9 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div class="footer-brand">Конъюнктура & Мнение</div>
+      <div class="footer-brand">MarketPulse</div>
       <div class="footer-contact">
-        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (999) 123‑45‑67 · Email: research@example.com
+        ИНН 246602726289 — Зернов Павел Николаевич · Тел.: +7 (914) 411-10-54 · Email: research@example.com
       </div>
     </div>
   </footer>
